# popping-lab

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: claimer.md  falsifier.md  jester.md  popper.md  technician.md
.claude/commands/: extract-claims.md  jester.md  test-claim.md
.claude/skills/agent-builder/: SKILL.md
.claude/skills/agent-builder/references/: context-isolation.md
.claude/skills/build-poc/: SKILL.md
.claude/skills/build-poc/references/: api.md  performance.md  web.md
.claude/skills/capabilities/: SKILL.md
.claude/skills/capabilities/registry/: claim_types.yaml  schema.yaml  tools.yaml
.claude/skills/extract-claims/: SKILL.md
.claude/skills/extract-claims/references/: patterns.md
.claude/skills/extract-claims/scripts/: extract.py
.claude/skills/refine-claim/: SKILL.md
.claude/skills/refine-claim/references/: belief.md  contract.md  equality.md  feasibility.md  spark.md  (+4 more)
.claude/skills/skill-builder/: SKILL.md
.claude/skills/test-claim/: SKILL.md
.claude/skills/wild-take/: SKILL.md
lab/2-plus-2-equals-4/: claims.yaml  experiment.ipynb  jester_reflection.md
lab/2-plus-2-equals-4-v2/: README.md  experiment.ipynb
lab/2-plus-2-equals-4-v2/poc/: test_claims.py
lab/trace-smoke/: hypothesis.md
src/veritas/: __init__.py  engine.py  evidence.py  extensions.py  falsification.py  symbolic.py  testing.py  truth.py
tests/: conftest.py  test_engine.py  test_evidence.py  test_falsification.py  test_falsification_audit.py  test_integration.py  test_symbolic.py  test_truth_types.py
(+14 files in other folders)
